// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`masked-input [snapshot] > renders correctly 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-text-input vesper-text-input-md vesper-text-input-default"
  >
    <input
      class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
      id="_r_1j_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`masked-input [snapshot] > renders correctly with a mask 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="_r_1l_"
  >
    Activation code
  </label>
  <div
    class="vesper-text-input vesper-text-input-md vesper-text-input-default"
  >
    <input
      aria-label="Activation code"
      class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
      id="_r_1l_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
